--- a/WebRoot/css/mine.css
+++ b/WebRoot/css/mine.css
@@ -2,31 +2,47 @@
 body {
 	margin:0 0;
 }
-#g1 path,#g1 polygon,path.button {
+#panel path,#panel polygon,.button path,.label path {
 	fill: #a0a0a0;
 	fill-opacity: .8;
 	stroke: #99cc66;
 	stroke-width: 1;
 }
 
-text {
-	font-family: Times New Roman;
-	font-size: 16pt;
-	font-weight: bold;
+rect {
+	fill: #009900;
+	stroke: #009900;
+	stroke-width: 2px;
+}
+
+#panel polygon {
+	cursor: pointer;
+}
+#panel polygon:hover {
+	fill: #B9B9B9;
 }
 
 .events-none,#g2,#gMines,#gQues,#gFlags {
 	pointer-events: none;
 }
 
-g.button:not (.events-none ) path {
+g.button path{
 	cursor: pointer;
 }
-
-g.button:not (.events-none ) text {
-	
+g.button:hover path {
+	fill: #009900;
+}
+g.button:hover text {
+	fill: #a0a0a0;
 }
 
-g.button:not (.events-none ):hover path {
-	fill: #b9b9b9;
+g.button text, g.label text {
+	fill: #006600;
+	text-anchor: middle;
+}
+
+text {
+	font-family: Times New Roman;
+	font-size: 16pt;
+	font-weight: bold;
 }
